# egui_desktop_widgets

./: .gitignore  Cargo.toml  README.md
crates/cad_widgets/: Cargo.toml
crates/cad_widgets/src/: lib.rs
crates/cad_widgets/src/docking/: mod.rs
crates/cad_widgets/src/feedback/: mod.rs
crates/cad_widgets/src/inputs/: mod.rs
crates/cad_widgets/src/panels/: mod.rs
crates/cad_widgets/src/shell/: mod.rs
crates/cad_widgets/src/theme/: mod.rs
crates/cad_widgets/src/trees/: mod.rs
crates/cad_widgets/src/workspace/: mod.rs
crates/cad_widgets_demo/: Cargo.toml
crates/cad_widgets_demo/src/: main.rs
docs/: development-guide.md  technical-spec.md
